Fixed order by logic and social icon sizes on mobile

--- a/src/scss/ucf-resource-search.scss
+++ b/src/scss/ucf-resource-search.scss
@@ -119,6 +119,7 @@ $screen-lg-min: 1200px;
   .ucf-resource-social-link {
     border-radius: 50%;
     display: inline-block;
+    font-size: 16px;
     height: 25px;
     text-align: center;
     padding-top: 1px;
